
WARNING: Works only with Eclipse 4 and CCW/Standalone.

=== Experimental User Plugin: Reload User plugins plugin

Clone the following Gist https://gist.github.com/laurentpetit/7924786

[source,bash]
git clone https://gist.github.com/laurentpetit/7924786
# Restart your Eclipse

And then you can reload user plugins via kbd:[Alt+U S] Keyboard Shortcut.

=== Leiningen based Launcher

The code is there, but not active at the moment (needs more love / hammock)

=== General purpose Leiningen task invoker

WARNING: Eclipse 4 and CCW/Standalone only

Addition of a new command, kbd:[Alt+L L] for launching a popup allowing to enter an arbitry leiningen command.

Since this is still an experimental feature, it is only accessible via a User Plugin atm. +
Clone the following Gist into your `~/.ccw/` folder to get it: https://gist.github.com/laurentpetit/7909761

[source,bash]
----
git clone https://gist.github.com/laurentpetit/7909761 ~/.ccw/lein-popup
# Restart your Eclipse or reload the Users plugins via kbd:[Alt+U S] if you have installed the 'Reload User plugins' user plugin.
----

=== CCW/Standalone

Moar sensible default preferences:

- Editors
** line numbers displayed in the margin
** 80 chars column displayed
** tabs automatically replaced by spaces when typing
- Worskpace
** automatic refresh of the Workspace resources without asking the user

Fix of an issue with the pre-referenced software update sites (was still pointing to Indigo instead of Kepler)


== Changes between Counterclockwise 0.12.3 and 0.20.0

`0.20.0` released on October 10, 2013

=== TL;DR

- `0.20.0` introduces **no breaking change**
- New Software Update Site http://updatesite.ccw-ide.org/stable
- Editor: new awesome `autoshift` feature, slurp/barf paredit commands support
- Lots of changes to fix stability concerns and various issues

=== Build Process totally rewritten

For people wanting to build Counterclockwise from scratch, or to work with Counterclockwise.
